--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@
 
 #calculator {
     width: 400px;
-    height: 620px;
+    height: 610px;
     background-color: rgb(59,68,85);
     border-radius: 12px;
 }
@@ -36,6 +36,10 @@
     background-color: rgb(83, 93, 122);
     border: none;
     border-radius: 10px;
+    color: white;
+    text-align: right;
+    font-size: 48px;
+    padding: 0 25px;
 }
 
 .button-row {
@@ -53,6 +57,7 @@
     background-color: rgb(59,68,85);
     box-shadow: -8px -8px 15px rgba(255,255,255,0.1), 5px 5px 15px rgba(0,0,0,0.2);
     font-size: 1.6rem;
+    cursor: pointer;
 }
 
 #row5 .symbol {
